{{$NEXT}}

v0.0.2    2012-03-06 16:44:35 CST6CDT
	- Added recreational microptimizations
	- Promoted to full release
v0.0.1    2012-03-06 13:07:11 CST6CDT
	- First version, released on an unsuspecting world.