@@ -6,7 +6,6 @@ use utf8;
 use parent "Exporter";
 use Carp ();
 use Net::LibIDN qw(idn_prep_name idn_to_ascii idn_to_unicode);
-
 our @EXPORT_OK = qw(public_suffix);
 
 # VERSION
@@ -20,30 +19,27 @@ sub public_suffix {
 	eval { $domain = idn_to_unicode idn_to_ascii idn_prep_name $domain }
 		or Carp::croak("Argument passed is not a well-formed domain name");
 
-	# Gather matching rules:
 	my @labels = split /\./, $domain;
-	my @matches = sort { $b->{label} =~ tr/.// <=> $a->{label} =~ tr/.// }
-		map {
-			my $label = $_ == 0 ? $domain : join ".", @labels[ $_ .. $#labels ];
-			exists $rules{$label}
-				? { type => $rules{$label}, label => $label }
-				: (); } 0 .. $#labels;
+	return exists $rules{$labels[-1]}
+		? do {
+			# Gather matching rules:
+			my @matches = sort {
+				$b->{label} =~ tr/.// <=> $a->{label} =~ tr/.// }
+				map {
+					my $label = !$_ ? $domain : join ".", @labels[$_..$#labels];
+					exists $rules{$label}
+						? { type => $rules{$label}, label => $label }
+						: () } 0 .. $#labels;
 
-	# Choose prevailing rule and return suffix, if one is to be found:
-	return do {
-		@matches == 0
-			? undef
-			: do {
-				my @exc_rules = grep { $_->{type} eq "e" } @matches;
-				@exc_rules > 0
-					? @exc_rules == 1
-						? undef
-						# Recheck with left-mode label chopped off
-						: public_suffix($exc_rules[0]{label} =~ /^[^.]+\.(.*)$/)
-					: do {
-						my ($type, $label) = @{$matches[0]}{qw(type label)};
-						$type eq "w"
-							and ($label) = $domain =~ /((?:[^.]+\.)$label)$/;
-						$label ||= undef; } } }; }
+			# Choose prevailing rule and return suffix:
+			my ($exc_rule) = grep { $_->{type} eq "e" } @matches;
+			$exc_rule
+				? $exc_rule->{label}
+				: do {
+					my ($type, $label) = @{$matches[0]}{qw(type label)};
+					$type eq "w"
+						and ($label) = $domain =~ /((?:[^.]+\.)$label)$/;
+					$label ||= undef } }
+		: undef }
 
 1;
